--- a/templates/form_new_article.html
+++ b/templates/form_new_article.html
@@ -1,4 +1,7 @@
 <form action="/articles/new" method="POST">
+  <label for="title"> Title: </label>
+  <input type="text" id="title" name="title"/>
+  <br>
   <label for="author">Author: </label>
   <input type="text" id="author" name="author"/>
   <br>
@@ -8,7 +11,7 @@
   <br>
   <label for="url"> URL: </label>
   <input type="text" id="url" name="url"/>
-  
+
   <br>
   <label for="content"> Text: </label>
   <input type="textarea" id="content" name="content"/>
