Able to register a new user and login/logout

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,8 @@
+{% if session.username %}
+<p>Olet kirjautunut nimellä {{ session.username }}</p>
+<a href="/logout">Kirjaudu ulos</a>
+{% endif %}
+
 {% for entry in entries %}
 {{entry}}
 <br>
