--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <p>Olet kirjautunut nimellä {{ session.username }}</p>
 <a href="/logout">Kirjaudu ulos</a>
 <a href="/articles/new">Luo uusi</a>
+{% else %}
+<p>Et ole kirjautunut sisään</p>
+<a href="/login">Kirjaudu sisään</a>
+<a href="/register">Luo uusi käyttäjä</>
 {% endif %}
 
 {% for entry in entries %}
