--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -5,5 +5,12 @@
   <label for="password">Password: </label>
   <input type="password" id="password" name="password"/>
   <br>
-  <input type="submit" value="Login"/>
-</form>
+  <input type="submit" value="Register"/>
+
+</form> 
+<a href="/login">Kirjaudu sisään olemassaolevalla käyttäjällä</a>
+{% if error_msg is defined %}
+<p> {{ error_msg }} </p>
+{% endif %}
+
+
