--- a/templates/form_new_article.html
+++ b/templates/form_new_article.html
@@ -1,3 +1,15 @@
+<head>
+  <!-- include libraries(jQuery, bootstrap) -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  <!-- include summernote css/js -->
+  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+</head>
+
+
 <style>
 .input,
 .textarea {
@@ -17,9 +29,22 @@
 }
 
 </style>
-<noscript> Parts of the functionality might not work correctly with JavaScript disabled </noscript>
 
-<form action="/articles/new" method="POST">
+
+<noscript> <h3>Parts of the functionality might not work correctly with JavaScript disabled </h3></noscript>
+
+
+<form id="postForm" action="/articles/new" method="POST">
+
+  <input id="send" type="submit" value="Send"/>
+  <br>
+
+  <label for="url"> URL: </label>
+  <input type="text" id="url" name="url"/>
+  <button type="button" onClick="getContents()">Load article</button>
+  <span id="error-message"></span>
+  <br> 
+
   <label for="title"> Title: </label>
   <input type="text" id="title" name="title"/>
   <br>
@@ -30,35 +55,70 @@
   <input type="date" id="written" name="written"/> 
 
   <br>
-  <label for="url"> URL: </label>
-  <input type="text" id="url" name="url"/>
-  <button type="button" onClick="getContents()">Load article</button>
 
+  <div id="summernote"></div>
+
+  <input id="content" name="content" type="hidden" value=""></input>
   <br>
-  <label for="content"> Text: </label> 
-  <textarea oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"̈́' class="textarea" id="content" name="content">
-  </textarea>
-  <!--<input type="textarea" id="content" name="content"> -->
-  <!--{% if content is defined %}-->
-  <!--{{content}}-->
-  <!--{% endif %}-->
-  <!--</input>-->
-
-
-  <br>
-  <input type="submit" value="Send"/>
+  <input id="send" type="submit" value="Send"/>
 </form>
 
+<div id="result"></div>
+
 <script>
-  function reqListener () {
-    document.getElementById("content").value = this.responseText
-    const textarea = document.getElementById("content")
-    textarea.style.height = "";
-    textarea.style.height = textarea.scrollHeight + 3 + "px"
+
+
+  $(document).ready(function() {
+    $('#summernote').summernote();
+  });
+
+$(function(){
+  $("#send").on("click",function() {
+    document.getElementById("content").value = $("#summernote").summernote('code');
+    //$("#content").val($('#summernote').summernote('code').text());
+
+    alert($("#content").val());
+
+    $("form#postForm").submit();
+  }); 
+});
+function reqListener () {
+  if (!this.responseText) {
+    const span = document.getElementById("error-message");
+    span.innerHTML = "Information could not be loaded";
+    setTimeout(() => {
+      span.innerHTML = "";
+    },
+      3000);
+    return;
   }
+  const response = JSON.parse(this.responseText);
+  if (!response) {
+    const span = document.getElementById("error-message");
+    span.innerHTML = "Information could not be loaded";
+    setTimeout(() => {
+      span.innerHTML = "";
+    },
+      3000);
+    return;
+  }
+  const date = document.getElementById("written");
+  date.value = response["date"];
+
+  const title = document.getElementById("title");
+  title.value = response["title"];
+
+  const result = document.getElementById("result");
+  result.text = response["content"];
+
+  let textarea = document.getElementById("content")
+  $('#summernote').summernote('code', response["content"]); 
+  console.log("finished loading");
+}
 
 function getContents() {
 
+  console.log("button clicked!");
   const url = "/articles/new/get_contents_from_url?url=" + encodeURIComponent(document.getElementById("url").value);
 
   var xhttp = new XMLHttpRequest();
