--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,16 @@
 {% if session.username %}
-<p>Olet kirjautunut nimellä {{ session.username }}</p>
+<p>Logged in as {{ session.username }}</p>
 <a href="/logout">Kirjaudu ulos</a>
 <a href="/articles/new">Luo uusi</a>
 {% else %}
-<p>Et ole kirjautunut sisään</p>
-<a href="/login">Kirjaudu sisään</a>
-<a href="/register">Luo uusi käyttäjä</>
-{% endif %}
-<br>
-{% import "post_listing.html" as post %}
-{% for entry in entries %}
-{{post.postlisting(entry["id"], entry["title"], entry["author"], entry["username"], entry["posterid"], entry["created_at"])}}
-<br>
-{% endfor %}
+<p>You're not logged in</p>
+<a href="/login">Log in</a>
+<a href="/register">Register a new user</>
+  {% endif %}
+  <br>
+  {% import "post_listing.html" as post %}
+  {% for entry in entries %}
+  <hr>
+  {{post.postlisting(entry["id"], entry["title"], entry["author"], entry["username"], entry["posterid"], entry["created_at"])}}
+  <br>
+  {% endfor %}
