--- a/templates/form_new_article.html
+++ b/templates/form_new_article.html
@@ -68,6 +68,7 @@ input[type=text] {
       <span id="error-message"></span>
     </div>
 
+    <br> 
     <div>
       <label for="title"> Title: </label>
       <input type="text" id="title" name="title"/>
@@ -80,11 +81,16 @@ input[type=text] {
 
     <div>
       <label for="written"> Date: </label>
+      <br>
       <input type="date" id="written" name="written"/> 
     </div>
 
-    <div id="summernote"></div>
+    <br>
 
+    <div>
+      <label for="summernote">Content: </label>
+      <div id="summernote"></div>
+    </div>
     <input id="content" name="content" type="hidden" value=""></input>
     <br>
     <input class="btn btn-primary" id="send-2" type="submit" value="Send"/>
