--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,27 +5,29 @@
 <title> {% block title %}{% endblock %}</title>
 
 <div class="container">
-  <nav class="navbar navbar-expand-sm navbar-light">
-    <a class="navbar-brand" href="/">Article library</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/articles/new">Post a new article</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">Page 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Page 3</a>
-      </li>
-      <li class="justify-content-end align-self-end">
-        {% if session["username"] %}
-        <a style="padding: 5px" class="align-self-end offset-md-8 btn-sm btn btn-primary" href="/logout">Logout</a>
-        {% else %}
-        <a style="padding: 5px" class="btn-sm btn btn-primary" href="/login">Login </a>
-        <a style="padding: 5px" class="btn-sm btn btn-primary" href="/register">Register</a>
-        {% endif %}
-      </li>
-    </ul>
-  </nav>
+  <div>
+    <nav class="navbar navbar-expand-sm navbar-light">
+      <a class="navbar-brand" href="/">Article library</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/articles/new">Post a new article</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Page 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Page 3</a>
+        </li>
+        <li class="justify-content-end align-self-end">
+          {% if session["username"] %}
+          <a style="padding: 5px" class="align-self-end offset-md-8 btn-sm btn btn-primary" href="/logout">Logout</a>
+          {% else %}
+          <a style="padding: 5px" class="btn-sm btn btn-primary" href="/login">Login </a>
+          <a style="padding: 5px" class="btn-sm btn btn-primary" href="/register">Register</a>
+          {% endif %}
+        </li>
+      </ul>
+    </nav>
+  </div>
   {% block content %}{% endblock %}
 </div>
