--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,7 @@
+<!doctype html>
+{% extends "layout.html" %}
+{% block title %} {{title}} {% endblock %}
+{% block content %}
 <h2> {{title}} </h2>
 
 <p> By: {% if author %} {{author}} {% else %} Unknown author {% endif %}</p>
@@ -7,3 +11,4 @@
 
 <hr>
 {{content|safe}}
+{% endblock %}
