--- a/templates/post.html
+++ b/templates/post.html
@@ -4,11 +4,11 @@
 {% block content %}
 <h2> {{title}} </h2>
 
-<p> By: {% if author %} {{author}} {% else %} Unknown author {% endif %}</p>
-<p> Published: {% if written %} {{written}} {% else %} - {% endif %}</p>
-<p> Source: {% if url %} <a href="{{url}}"> {{url}} </a> {% else %} - {% endif %} </p>
-<p> Posted by <a href="/users/{{userid}}">{{username}}</a> on {{postdate}} </p>
+<p> By: {% if entry["author"] %} {{entry["author"]}} {% else %} Unknown author {% endif %}</p>
+<p> Published: {% if entry["written"] %} {{entry["written"]}} {% else %} - {% endif %}</p>
+<p> Source: {% if entry["url"] %} <a href="{{url}}"> {{entry["url"]}} </a> {% else %} - {% endif %} </p>
+<p> Posted by <a href="/users/{{entry["userid"]}}">{{entry["username"]}}</a> on {{entry["postdate"]}} </p>
 
 <hr>
-{{content|safe}}
+{{entry["content"]|safe}}
 {% endblock %}
