--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,19 +8,20 @@
   <div>
     <nav class="navbar navbar-expand-sm navbar-light">
       <a class="navbar-brand" href="/">Article library</a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
+      <ul class="navbar-nav row">
+        {% if session["username"] %}
+        <li class="nav-item col-auto">
           <a class="nav-link" href="/articles/new">Post a new article</a>
         </li>
-        {% if session["username"] %}
-        <li class="nav-item">
+        <li class="nav-item col-auto">
           <a class="nav-link" href="/user/{{session["userid"]}}">My posts</a>
         </li>
-         {% endif %}
-        <li class="nav-item">
-          <a class="nav-link" href="#">Page 3</a>
-        </li>
-        <li class="justify-content-end align-self-end">
+        <li class="nav-item col-auto">
+          <span class="nav-link">User: <strong>{{session["username"]}}</strong></span>
+        </li> 
+        {% endif %}
+
+        <li style="text-align: right" class="col-auto">
           {% if session["username"] %}
           <a style="padding: 5px" class="align-self-end offset-md-8 btn-sm btn btn-primary" href="/logout">Logout</a>
           {% else %}
@@ -28,6 +29,7 @@
           <a style="padding: 5px" class="btn-sm btn btn-primary" href="/register">Register</a>
           {% endif %}
         </li>
+
       </ul>
     </nav>
   </div>
